deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deployment-ecare-prod
  namespace: ecare-prod
spec: 
  replicas: 3 
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 50%
    type: RollingUpdate

  selector:
    matchLabels: 
      app: ecare-prod   
  template:
    metadata:
      name: pods-ecare
      labels:
        app: ecare-prod
    spec:
      imagePullSecrets:
        - 
          name: dockerregistrykey

      containers:
        - 
          name: demo-app
          image: xxxxxxxxx.dkr.ecr.ap-southeast-1.amazonaws.com/ecare-app:latest
          imagePullPolicy: Always
          ports:
            - 
              containerPort: 80
          livenessProbe:
            initialDelaySeconds: 240
            periodSeconds: 15
            tcpSocket:
              port: 80
            timeoutSeconds: 5
            failureThreshold: 3  

          volumeMounts:
            - mountPath: /app
              name: codebase

      imagePullSecrets:
        - 
          name: dockerregistrykey

      volumes: 
        - 
          name: codebase
          persistentVolumeClaim:
            claimName: pvc-app
