pod-mysl.yml
apiVersion: v1
kind: Pod 
metadata: 
  name: ecare-db
  labels: 
    db: ecare-db
  namespace: ecare-prod 
spec: 
  containers: 
    - 
      name: demo-mysql
      image: mysql:latest 
      ports: 
        - 
          containerPort: 3306
