pod.yml
apiVersion: v1
kind: Pod
metadata: 
 name: firstpod 
 labels: 
  app: myapp1 
  type: frontend 
spec:  
 containers:
  - 
   name: nginx 
   image: nginx:alpine
 tolerations:
   - 
     effect: "NoSchedule" 
     key: "memory"
     operator: "Equal"
     value: "high"
