pod2.yml
apiVersion: v1
kind: Pod
metadata: 
 name: secondpod 
 labels: 
  app: myapp2
  type: backend 
spec:  
 containers:
  - 
   name: nginx 
   image: nginx:alpine
