pod3.yml
apiVersion: v1
kind: Pod
metadata: 
 name: thirdpod 
 labels: 
  app: myapp1
  type: backend 
spec:  
 containers:
  - 
   name: nginx 
   image: nginx:alpine
