service-mysql.yml
apiVersion: v1
kind: Service
metadata: 
 name: dbsvc 
 namespace: ecare-prod 
spec: 
   
  ports: 
   - 
     port: 3306
     targetPort: 3306 
  selector: 
    db: ecare-db
  clusterIP: None
