service.yml
apiVersion: v1 
kind: Service   
metadata: 
 name: firstservice
 namespace: ecare-prod
spec: 
 type: NodePort
 ports:
  -  
   port: 80
   targetPort: 80
 selector:
  app: ecare-prod
